# DOPPELGANGER-STUDIO

./: .gitignore  BUG_FIXES.md  Dockerfile  ENVIRONMENT_SETUP.md  JOKE_OPTIMIZER_IMPLEMENTATION.md  NEXT_STEPS.md  PHASE_1_COMPLETION_REPORT.md  PHASE_3_IMPLEMENTATION_STATUS.md  PHASE_4_DIRECTIVE.md  PROJECT_ROADMAP.md  PYTEST_FIX_QUICK_REF.md  PYTEST_FIX_SUMMARY.md  README.md  TASK_10_COMPLETE.md  TASK_11_COMPLETE.md  TASK_12_PROGRESS.md  TASK_7_COMPLETE.md  TASK_9_COMPLETE.md  TEST_FIXES_COMPLETE.md  TEST_PROGRESS_TRACKER.md  TEST_REFINEMENT_QUICK_WINS.md  activate.ps1  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
.history/: .env_20251004000727.example  .gitignore_20251005091939  BUG_FIXES_20251007155210.md  ENVIRONMENT_SETUP_20251005093241.md  JOKE_OPTIMIZER_IMPLEMENTATION_20251005225919.md  LICENSE_20251003212755  LONGLIVE_ANALYSIS_20251007144742.md  LONGLIVE_ANALYSIS_20251007144952.md  NEXT_STEPS_20251007124704.md  PHASE_1_COMPLETION_REPORT_20251003212800.md  PHASE_2_COMPLETION_REPORT_20251003235754.md  PHASE_2_COMPLETION_REPORT_20251004000728.md  PHASE_2_DEEP_DIVE_REPORT_20251005000512.md  PHASE_2_DEEP_DIVE_REPORT_20251005000825.md  PHASE_2_FINAL_COMPLETION_REPORT_20251005003537.md  PHASE_2_FINAL_COMPLETION_REPORT_20251005004108.md  PHASE_3_FINAL_VERIFICATION_20251005053553.md  PHASE_3_FINAL_VERIFICATION_20251005091307.md  PHASE_3_IMPLEMENTATION_STATUS_20251005010239.md  PHASE_3_MAXIMUM_PARALLEL_COMPLETE_20251005020654.md  PHASE_3_MAXIMUM_PARALLEL_COMPLETE_20251005091307.md  PHASE_3_SESSION_REPORT_20251005010346.md  PHASE_3_SESSION_REPORT_20251005015514.md  PHASE_4_DIRECTIVE_20251005192630.md  PHASE_4_PROGRESS_20251005200958.md  PHASE_4_PROGRESS_20251005212704.md  PROJECT_ROADMAP_20251007124618.md  PROJECT_STATUS_20251007160151.md  PROJECT_STATUS_20251007160823.md  PROJECT_STATUS_20251007170846.md  PROJECT_STATUS_20251007170904.md  PROJECT_STATUS_20251007171013.md  PYTEST_FIX_QUICK_REF_20251005100207.md  PYTEST_FIX_SUMMARY_20251005100142.md  README_20251003212759.md  README_20251003232104.md  README_20251005003422.md  README_20251005004108.md  SUBTASK_15_COMPLETE_20251006185016.md  SUBTASK_15_COMPLETE_20251006190025.md  (+28 more)
.history/config/: asset_sources_20251003205251.yaml  asset_sources_20251003212756.yaml
.history/docs/: IMDB_SCRAPER_20251005003404.md  IMDB_SCRAPER_20251005004110.md  INSTRUCTIONS_20251003205104.md  INSTRUCTIONS_20251003212800.md  PHASE_3_ARCHITECTURE_20251005020415.md  README_20251003212800.md  USAGE_EXAMPLES_20251005020533.md  USAGE_EXAMPLES_20251005091308.md
.history/src/: __init___20251005094621.py
.history/tests/: README_20251003212801.md  benchmark_parallel_speedup_20251007155523.py  benchmark_parallel_speedup_20251007155651.py  benchmark_parallel_speedup_20251007155710.py  benchmark_parallel_speedup_20251007155813.py  benchmark_parallel_speedup_20251007160819.py  conftest_20251003212755.py  conftest_20251005094621.py  (+11 more)
config/: manim_config.yaml
docs/: OPERATIONAL_RUNBOOKS.md  PHASE_2_PART_1_DIRECTIVE.md  PHASE_3_4_COMPLETION.md  PHASE_3_4_FINAL_REPORT.md  PHASE_3_4_STATUS.md  PHASE_3_ARCHITECTURE.md  PRODUCTION_READINESS.md  SPRINT_2_COMPLETION.md  animation_guide.md  phase5_animation_directive.md  phase5_completion_report.md  phase6_completion_report.md  phase6_voiceover_directive.md  voiceover_guide.md
examples/: animation_demo.py  voiceover_demo.py
k8s/: deployment.yaml
src/: README.md
tests/: test_research_system.py
(+355 files in other folders)
